1. Possibility to create new version of skin. 2. Sending emails from contact page 3. Bugfixes

--- a/app/views/mokio/skins/new_skin.html.slim
+++ b/app/views/mokio/skins/new_skin.html.slim
@@ -1,5 +1,10 @@
 = f.input :zip_file, :as => :file
 
+p 
+  span.icomoon-icon-info
+  = t("skins.new_version_help")
+    
+
 hr
 .row-fluid
   .span6
